11-kubernetes-ingress-configmaps-secrets/03-ingress/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campus-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: campus-frontend
  template:
    metadata:
      labels:
        app: campus-frontend
    spec:
      containers:
        - name: frontend
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: campus-frontend
spec:
  selector:
    app: campus-frontend
  ports:
    - port: 80
      targetPort: 80
