11-kubernetes-ingress-configmaps-secrets/03-ingress/hybrid-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campus-hybrid-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: portal.campus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: campus-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: campus-backend
                port:
                  number: 8080
    - host: api.campus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: campus-backend
                port:
                  number: 8080
